tratamento de espaço em metodo de pagamento + readme